Add prerequisites to course endpoint
